force-app/main/default/objects/RecommendationSettings__c/RecommendationSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Settings to use for recommendations</description>
    <label>Recommendation Settings</label>
</CustomObject>