force-app/main/default/objects/RecommendationSettings__c/fields/Recommend_if_aggregate_score_above__c.field-meta.xml
<CustomField>
    <fullName>Recommend_if_aggregate_score_above__c</fullName>
    <description>Recommend if aggregate score of recommended values is above this one</description>
    <label>Recommend if aggregate score above</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>