force-app/main/default/objects/RecommendationSettings__c/fields/Recommend_if_single_score_above__c.field-meta.xml
<CustomField>
    <fullName>Recommend_if_single_score_above__c</fullName>
    <description>Recommend value if single score is above this one</description>
    <label>Recommend if single score above</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>