force-app/main/default/objects/RecommendationSettings__c/fields/Top_value_badge_if_score_above__c.field-meta.xml
<CustomField>
    <fullName>Top_value_badge_if_score_above__c</fullName>
    <description>Show image of Favorite if top value score is higher than this one</description>
    <label>Top value badge if score above</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>